k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp1
spec:
  selector:
    app: pythonapp1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
